# FaceTracing

./: .gitignore  README.md  local.properties  settings.gradle
Springboot-facedetect/: pom.xml
Springboot-facedetect/src/main/java/: Application.java
Springboot-facedetect/src/main/java/me/config/: CorsConfig.java  FaceProperty.java  GlobalExceptionHandler.java
Springboot-facedetect/src/main/java/me/controller/: FaceDetectController.java
Springboot-facedetect/src/main/java/utils/: ResponseUtil.java  Utils.java  ZipUtil.java
Springboot-facedetect/src/main/resources/: application.properties
app/: build.gradle
app/src/: read.txt
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml  activity_regmain.xml  activity_start.xml
app/src/main/res/values/: colors.xml
dlibrary/: CMakeLists.txt  build.gradle
dlibrary/src/androidTest/java/com/ylm/dlibrary/: ExampleInstrumentedTest.java
dlibrary/src/main/: AndroidManifest.xml
dlibrary/src/main/assets/: native-lib_bak.cpp
dlibrary/src/main/cpp/: CascadeDetectorAdapter.cpp  FaceBase.cpp  FaceBase.h  FaceCollect.cpp  FaceCollect.h  FaceDetect.cpp  FaceDetect.h  JniCall.cpp  JniCall.h  lm-androidLog.h  native-lib.cpp
dlibrary/src/main/java/com/ylm/dlibrary/: Utils.java
dlibrary/src/main/java/com/ylm/dlibrary/camera/: CameraHelper.java
dlibrary/src/main/java/com/ylm/dlibrary/detector/: FaceDetector.java  FaceDetectorManager.java
dlibrary/src/main/java/com/ylm/dlibrary/zip/: ZipUtil.java
dlibrary/src/test/java/com/ylm/dlibrary/: ExampleUnitTest.java
(+11 files in other folders)
